--- a/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
@@ -3774,6 +3774,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "811f27c1-7652-4736-bf98-6ee23cfe6a5d",
+   "metadata": {},
+   "source": [
+    "# Ethical Implications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5024c517-3592-4b44-b7af-6de279646776",
+   "metadata": {},
+   "source": [
+    "        In Milestone 4, we made 7 distinct transformations to acquire weather data from every ball Carlos Santana put in play over his 17-year Major League Baseball Career. First to get all the information we needed to make the call we had to perform a transformation on a key DataFrame that contained every team name and abbreviation. The abbreviations were all capitalized so we could then perform various joins to get the Unix time, latitude and longitude on the same DataFrame. After we completed the API call and read in nearly 2000 different calls worth of weather data, we separated all the information from JSON format into its own columns in the DataFrame. We then removed unnecessary columns from the dataset. These columns were either removed because they were repetitive, no longer needed, or information not helpful to our project's scope. We then performed two transformations, one converting all temperature values from Kelvin to Fahrenheit and the second, converting pressure from millibars to atmospheres. Both conversions were made to store data in the form most understood by readers. Finally, we removed all duplicate rows in the dataset. This is essential because Santana put multiple balls in play per game. Storing the same information multiple times is not only bad practice but could lead to data problems in future phases of this project.  \n",
+    "\n",
+    "        Ethically there are minimal regulatory guidelines regarding this historical weather data. The data is publicly available. Based on the transformations we chose it is possible that removing the sunrise and sunset parameters from our dataset could leave out valuable information in evaluating Santana’s effectiveness. It is possible that the sun could have created shadows in the ballpark or be in his eyes and affected Santana’s performance. There were minimal assumptions in transforming that data in this step. However, in previous steps we chose to assign only 7pm start times to games. There is potential with differing start times that the weather may change and thus affect how we evaluate Santana's performance. These discrepancies have potential to affect how Santana is compensated moving forward and affecting his career outlook. The Data was sourced from Open Weather API which is a credible protected platform. To make the API calls one both needs to have an authorized key and pay for the service. The protection and credibility of this source give me confidence that the data reported is true, accurate and acquired ethically. The sheer size of the dataset helps mitigate some of the ethical concerns outlined above about unfairly evaluating Santana’s performance. The size of the dataset will help limit the effects of some of the outliers. Moving forward I could potentially choose to eliminate outliers in the weather data. By doing this we would only be evaluating Santana on regularly occurring weather conditions.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ae6c524-0f4d-4992-9e7b-f492cdc86c5b",
    "metadata": {},
    "source": [
