--- a/Heinen_DSC540_Weeks7&8.ipynb
+++ b/Heinen_DSC540_Weeks7&8.ipynb
@@ -232,16 +232,20 @@
    "source": [
     "# 6) find the numeric didgets in these links. These are the file numbers of the top 100 ebooks. \n",
     "\n",
-    "# initialize booknumbers list. \n",
+    "# initialize book num as empty list. \n",
+    "# here we will store the numbers. \n",
     "booknum=[]\n",
     "\n",
+    "#loop through every link in the list of links \n",
     "for i in range(19,119):\n",
     "    link=links[i]\n",
+    "    # use strip to remove puncuation etc\n",
     "    link=link.strip()\n",
-    "    # Regular expression to find the numeric digits in the link (href) string\n",
+    "    # 7) use the findall from regrex method to find the numeric didgets in the string. \n",
     "    n=re.findall('[0-9]+',link)\n",
     "    if len(n)==1:\n",
-    "        # Append the filenumber casted as integer\n",
+    "        # Add the file number to the list\n",
+    "        # store as an intiger\n",
     "        booknum.append(int(n[0]))\n"
    ]
   },
@@ -265,6 +269,175 @@
    "source": [
     "print (\"\\nThe file numbers for the top 100 ebooks on Gutenberg are shown below\\n\"+\"-\"*70)\n",
     "print(booknum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "4addf082-c92b-4045-9df2-0f208403f46a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Top 100 | Project Gutenberg\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Menu▾\n",
+      "\n",
+      "\n",
+      "\n",
+      "About\n",
+      "          ▾\n",
+      "\n",
+      "▾\n",
+      "\n",
+      "\n",
+      "About Project Gutenberg\n",
+      "Collection Development\n",
+      "Contact Us\n",
+      "History & Philosophy\n",
+      "Permissions & License\n",
+      "Privacy Policy\n",
+      "Terms of Use\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search and Browse\n",
+      "      \t  ▾\n",
+      "\n",
+      "▾\n",
+      "\n",
+      "\n",
+      "Book Search\n",
+      "Bookshelves\n",
+      "Frequently Downloaded\n",
+      "Offline Catalogs\n",
+      "\n",
+      "\n",
+      "\n",
+      "Help\n",
+      "          ▾\n",
+      "\n",
+      "▾\n",
+      "\n",
+      "\n",
+      "All help topics →\n",
+      "Copyright How-To\n",
+      "Errata, Fixes and Bug Reports\n",
+      "File Formats\n",
+      "Frequently Asked Questions\n",
+      "Policies →\n",
+      "Public Domain eBook Submission\n",
+      "Submitting Your Own Work\n",
+      "Tablets, Phones and eReaders\n",
+      "The Attic →\n",
+      "\n",
+      "\n",
+      "Donate\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Ways to donate\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "To determine the ranking we count the times each file gets downloaded.\n",
+      "Both HTTP and FTP transfers are counted.\n",
+      "Only transfers from ibiblio.org are counted as we have no access to our mirrors log files.\n",
+      "Multiple downloads from the same IP address on the same day count as one download.\n",
+      "IP addresses that download more than 100 files a day are considered\n",
+      "robots and are not considered.\n",
+      "Books made out of multiple files like most audio books are counted\n",
+      "if any file is downloaded.\n",
+      "\n",
+      "Downloaded Books\n",
+      "2024-08-04356874\n",
+      "last 7 days2526135\n",
+      "last 30 days11620437\n",
+      "\n",
+      "Pretty Pictures\n",
+      "\n",
+      "Top 100 EBooks yesterday —\n",
+      "  Top 100 Authors yesterday —\n",
+      "  Top 100 EBooks last 7 days —\n",
+      "  Top 100 Authors last 7 days —\n",
+      "  Top 100 EBooks last 30 days —\n",
+      "  Top 100 Authors last 30 days\n",
+      "\n",
+      "Top 100 EBooks yesterday\n",
+      "\n",
+      "Romeo and Juliet by William Shakespeare (2772)\n",
+      "Moby Dick; Or, The Whale by Herman Melville (2420)\n",
+      "A Room with a View by E. M.  Forster (1949)\n",
+      "Middlemarch by George Eliot (1931)\n",
+      "Little Women; Or, Meg, Jo, Beth, and Amy by Louisa May Alcott (1830)\n",
+      "The Complete Works of William Shakespeare by William Shakespeare (1807)\n",
+      "Pride and Prejudice by Jane Austen (1747)\n",
+      "The Enchanted April by Elizabeth Von Arnim (1692)\n",
+      "The Blue Castle: a novel by L. M.  Montgomery (1635)\n",
+      "The Adventures of Ferdinand Count Fathom — Complete by T.  Smollett (1555)\n",
+      "Cranford by Elizabeth Cleghorn Gaskell (1528)\n",
+      "The Expedition of Humphry Clinker b\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8) print the first 2000 characters of the soup text. \n",
+    "# Use .text method\n",
+    "print(soup.text[:2000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7da90d20-242d-40fa-b071-1061fb13ed30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9) Search the extracted text (using a regular expression) \n",
+    "# from the soup object to find the names of the top 100 ebooks. \n"
    ]
   },
   {
