--- a/Heinen_DSC540_Weeks7&8.ipynb
+++ b/Heinen_DSC540_Weeks7&8.ipynb
@@ -431,13 +431,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "7da90d20-242d-40fa-b071-1061fb13ed30",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9) Search the extracted text (using a regular expression) \n",
-    "# from the soup object to find the names of the top 100 ebooks. \n"
+    "# from the soup object to find the names of the top 100 ebooks. \n",
+    "\n",
+    "# initialize empty list to store ebook names. \n",
+    "# Temp empty list of Ebook names\n",
+    "lst_titles_temp=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "33a3d235-ebf4-4d20-a1ce-efcff16d8f89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 11) run for loop to add strings to temp list. \n",
+    "\n",
+    "# Define a start index \n",
+    "# Here this will allow to begin to collect title names after the Ebook title is displayed\n",
+    "# use tex and split lines to vreate split or start point. \n",
+    "\n",
+    "start_index=soup.text.splitlines().index('Top 100 EBooks yesterday')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "7d58c3cc-f97f-469d-a6da-12f1dde117d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 11) run for loop to add strings to temp list. \n",
+    "# loop through the first 100 titles \n",
+    "for i in range(100):\n",
+    "    # Add these titles to the temporary list after the start index. \n",
+    "    # use text and split lines to itetrate through each line after the start. \n",
+    "    lst_titles_temp.append(soup.text.splitlines()[start_index+2+i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "088014e6-c903-42f0-8754-e932cfdfd8b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize list to perm store titles. \n",
+    "lst_titles=[]\n",
+    "# 12) ues match and span to find indices and use them. \n",
+    "#loop through first 100 titles \n",
+    "for i in range(100):\n",
+    "    # Define ID and ID to and itterate through each item in temp list \n",
+    "    id1,id2=re.match('^[a-zA-Z ]*',lst_titles_temp[i]).span()\n",
+    "    # Add titles id /id2 to the final list. \n",
+    "    lst_titles.append(lst_titles_temp[i][id1:id2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "2ea223b1-466b-493e-a815-c6ec774b21ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Romeo and Juliet by William Shakespeare \n",
+      "Moby Dick\n",
+      "A Room with a View by E\n",
+      "Middlemarch by George Eliot \n",
+      "Little Women\n",
+      "The Complete Works of William Shakespeare by William Shakespeare \n",
+      "Pride and Prejudice by Jane Austen \n",
+      "The Enchanted April by Elizabeth Von Arnim \n",
+      "The Blue Castle\n",
+      "The Adventures of Ferdinand Count Fathom \n",
+      "Cranford by Elizabeth Cleghorn Gaskell \n",
+      "The Expedition of Humphry Clinker by T\n",
+      "History of Tom Jones\n",
+      "Twenty years after by Alexandre Dumas and Auguste Maquet \n",
+      "The Adventures of Roderick Random by T\n",
+      "My Life \n",
+      "Frankenstein\n",
+      "Calculus Made Easy by Silvanus P\n",
+      "Alice\n",
+      "Millions of cats by Wanda G\n",
+      "Metamorphosis by Franz Kafka \n",
+      "Dracula by Bram Stoker \n",
+      "Crime and Punishment by Fyodor Dostoyevsky \n",
+      "The Brothers Karamazov by Fyodor Dostoyevsky \n",
+      "The negro workers \n",
+      "\n",
+      "Don Quijote by Miguel de Cervantes Saavedra \n",
+      "The Picture of Dorian Gray by Oscar Wilde \n",
+      "War and Peace by graf Leo Tolstoy \n",
+      "My heart and my flesh by Elizabeth Madox Roberts \n",
+      "Ulysses by James Joyce \n",
+      "Heart of Darkness by Joseph Conrad \n",
+      "A Tale of Two Cities by Charles Dickens \n",
+      "The Great Gatsby by F\n",
+      "The Adventures of Sherlock Holmes by Arthur Conan Doyle \n",
+      "A Doll\n",
+      "Thus Spake Zarathustra\n",
+      "The Iliad by Homer \n",
+      "\n",
+      "The Romance of Lust\n",
+      "The Kama Sutra of Vatsyayana by Vatsyayana \n",
+      "The Prince by Niccol\n",
+      "Adventures of Huckleberry Finn by Mark Twain \n",
+      "Doctrina Christiana \n",
+      "Anne of Green Gables by L\n",
+      "The Importance of Being Earnest\n",
+      "The triumph of the innocents by William Holman Hunt \n",
+      "Little Women by Louisa May Alcott \n",
+      "Grimms\n",
+      "The Count of Monte Cristo by Alexandre Dumas and Auguste Maquet \n",
+      "The Devil is an Ass by Ben Jonson \n",
+      "Du c\n",
+      "Tractatus Logico\n",
+      "The Yellow Wallpaper by Charlotte Perkins Gilman \n",
+      "Winnie\n",
+      "Beyond Good and Evil by Friedrich Wilhelm Nietzsche \n",
+      "Great Expectations by Charles Dickens \n",
+      "The Odyssey by Homer \n",
+      "Wuthering Heights by Emily Bront\n",
+      "The Nursery\n",
+      "The Strange Case of Dr\n",
+      "The Web \n",
+      "Don Quixote by Miguel de Cervantes Saavedra \n",
+      "Les Mis\n",
+      "Meditations by Emperor of Rome Marcus Aurelius \n",
+      "White Nights and Other Stories by Fyodor Dostoyevsky \n",
+      "A Study in Scarlet by Arthur Conan Doyle \n",
+      "Treasure Island by Robert Louis Stevenson \n",
+      "The Art of War by active \n",
+      "The divine comedy by Dante Alighieri \n",
+      "Jane Eyre\n",
+      "The King in Yellow by Robert W\n",
+      "The Adventures of Tom Sawyer\n",
+      "The First Book of Adam and Eve by Rutherford Hayes Platt \n",
+      "Josefine Mutzenbacher by Felix Salten \n",
+      "Pictorial history of the war for the Union\n",
+      "The Decameron of Giovanni Boccaccio by Giovanni Boccaccio \n",
+      "A Modest Proposal by Jonathan Swift \n",
+      "A royal son and mother by Baroness Pauline von H\n",
+      "The King James Version of the Bible \n",
+      "Les mis\n",
+      "Walden\n",
+      "Novo dicion\n",
+      "Notes from the Underground by Fyodor Dostoyevsky \n",
+      "The Prophet by Kahlil Gibran \n",
+      "The art of money getting \n",
+      "Barnaby Rudge\n",
+      "The Problems of Philosophy by Bertrand Russell \n",
+      "Anna Karenina by graf Leo Tolstoy \n",
+      "\n",
+      "Peter Pan by J\n",
+      "The Republic by Plato \n",
+      "The Confessions of St\n",
+      "The Scarlet Letter by Nathaniel Hawthorne \n",
+      "A Christmas Carol in Prose\n",
+      "The murder of Roger Ackroyd by Agatha Christie \n",
+      "A Bold Stroke for a Husband\n",
+      "The Critique of Pure Reason by Immanuel Kant \n",
+      "The Legend of Sleepy Hollow by Washington Irving \n",
+      "From Berlin to Bagdad and Babylon by J\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 13) Print a list of titles. \n",
+    "\n",
+    "# Loop through and print every item in the top eBooks list. \n",
+    "for l in lst_titles:\n",
+    "    print(l)"
    ]
   },
   {
@@ -447,6 +621,30 @@
    "source": [
     "# 2) Activity 7.02"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5b67662-59a2-47c2-b7c1-76717034de10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31fb5767-672b-46a0-ac72-1c9e21449181",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3433d03-743e-4605-95f4-cb056b19785a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
