--- a/Heinen_DSC540_Weeks7&8.ipynb
+++ b/Heinen_DSC540_Weeks7&8.ipynb
@@ -624,27 +624,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "d5b67662-59a2-47c2-b7c1-76717034de10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1) Import necessary packages. \n",
+    "import urllib.request, urllib.parse, urllib.error\n",
+    "import json\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
+   "id": "1532d683-2e9a-42ae-8e53-30b75daeb318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 store API Key\n",
+    "# Write API key into JSON file \n",
+    "# API key\n",
+    "api_key = '304995df'\n",
+    "\n",
+    "# Create a dictionary to store the API key\n",
+    "api_key_data = {\n",
+    "    'OMDBapi': api_key\n",
+    "}\n",
+    "\n",
+    "# Write the API key data to a JSON file\n",
+    "with open('APIkeys.json', 'w') as file:\n",
+    "    json.dump(api_key_data, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "31fb5767-672b-46a0-ac72-1c9e21449181",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 4) open file. \n",
+    "# Load the API key from file\n",
+    "# use json.loads()\n",
+    "\n",
+    "with open('APIkeys.json') as f:\n",
+    "    keys = json.load(f)\n",
+    "    omdbapi = keys['OMDBapi']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "e3433d03-743e-4605-95f4-cb056b19785a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5) assign OMBd portal as string value to variable. \n",
+    "serviceurl = 'http://www.omdbapi.com/?'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "9c47b625-649f-414b-9dce-296393c30a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6) Create variable API key with the last portion of the URL \n",
+    "apikey = '&apikey='+omdbapi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "87f3710f-a174-4294-badc-1fbbbf230d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7) write function print JSON to print movie data \n",
+    "def print_json(json_data):\n",
+    "    # Define keys list. \n",
+    "    list_keys=['Title', 'Year', 'Rated', 'Released', 'Runtime', 'Genre', 'Director', 'Writer', \n",
+    "               'Actors', 'Plot', 'Language', 'Country', 'Awards', 'Ratings', \n",
+    "               'Metascore', 'imdbRating', 'imdbVotes', 'imdbID']\n",
+    "    print(\"-\"*50)\n",
+    "    for k in list_keys:\n",
+    "        # Loop throug thr keys and print the JSON data. \n",
+    "        if k in list(json_data.keys()):\n",
+    "            print(f\"{k}: {json_data[k]}\")\n",
+    "    print(\"-\"*50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "60e0305d-1548-4f35-bae1-429225e461b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8) Write utility function to download movie poster \n",
+    "\n",
+    "def save_poster(json_data):\n",
+    "    #Import packages\n",
+    "    import os\n",
+    "    # Define title \n",
+    "    title = json_data['Title']\n",
+    "    # define the pister URL from the JSON data\n",
+    "    poster_url = json_data['Poster']\n",
+    "    # Splits the poster url by '.' and picks up the last string as file extension\n",
+    "    poster_file_extension=poster_url.split('.')[-1]\n",
+    "    # Reads the image file from web\n",
+    "    poster_data = urllib.request.urlopen(poster_url).read()\n",
+    "        \n",
+    "    savelocation=os.getcwd()+'\\\\'+'Posters'+'\\\\'\n",
+    "    # Creates new directory if the directory does not exist. Otherwise, just use the existing path.\n",
+    "    if not os.path.isdir(savelocation):\n",
+    "        os.mkdir(savelocation)\n",
+    "    \n",
+    "    filename=savelocation+str(title)+'.'+poster_file_extension\n",
+    "    f=open(filename,'wb')\n",
+    "    f.write(poster_data)\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "f90d9e17-e653-4fde-a240-a5bfa88e7253",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9) Writ utility function to search a movie by its name. \n",
+    "\n",
+    "def search_movie(title):\n",
+    "    try:\n",
+    "        url = serviceurl + urllib.parse.urlencode({'t': str(title)})+apikey\n",
+    "        print(f'Retrieving the data of \"{title}\" now... ')\n",
+    "        print(url)\n",
+    "        uh = urllib.request.urlopen(url)\n",
+    "        data = uh.read()\n",
+    "        json_data=json.loads(data)\n",
+    "        \n",
+    "        if json_data['Response']=='True':\n",
+    "            print_json(json_data)\n",
+    "            # Asks user whether to download the poster of the movie\n",
+    "            if json_data['Poster']!='N/A':\n",
+    "                save_poster(json_data)\n",
+    "        else:\n",
+    "            print(\"Error encountered: \",json_data['Error'])\n",
+    "    \n",
+    "    except urllib.error.URLError as e:\n",
+    "        print(f\"ERROR: {e.reason}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "d7974bc4-2c1b-4c05-ba85-ad30d3f61790",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving the data of \"Titanic\" now... \n",
+      "http://www.omdbapi.com/?t=Titanic&apikey=304995df\n",
+      "--------------------------------------------------\n",
+      "Title: Titanic\n",
+      "Year: 1997\n",
+      "Rated: PG-13\n",
+      "Released: 19 Dec 1997\n",
+      "Runtime: 194 min\n",
+      "Genre: Drama, Romance\n",
+      "Director: James Cameron\n",
+      "Writer: James Cameron\n",
+      "Actors: Leonardo DiCaprio, Kate Winslet, Billy Zane\n",
+      "Plot: A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.\n",
+      "Language: English, Swedish, Italian, French\n",
+      "Country: United States, Mexico\n",
+      "Awards: Won 11 Oscars. 126 wins & 83 nominations total\n",
+      "Ratings: [{'Source': 'Internet Movie Database', 'Value': '7.9/10'}, {'Source': 'Rotten Tomatoes', 'Value': '88%'}, {'Source': 'Metacritic', 'Value': '75/100'}]\n",
+      "Metascore: 75\n",
+      "imdbRating: 7.9\n",
+      "imdbVotes: 1,292,276\n",
+      "imdbID: tt0120338\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10) Test search movie function by entering titanic. \n",
+    "\n",
+    "# Call Search Movie.\n",
+    "# pass Titanic\n",
+    "search_movie(\"Titanic\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "5c54618d-7665-4485-bdee-c0f5e752f5de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving the data of \"Random_error\" now... \n",
+      "http://www.omdbapi.com/?t=Random_error&apikey=304995df\n",
+      "Error encountered:  Movie not found!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11) pass random error into the search movie function. \n",
+    "# the purpose here is to test error handeling. \n",
+    "search_movie(\"Random_error\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3433d03-743e-4605-95f4-cb056b19785a",
+   "id": "9d2ad2e3-e58d-4385-84c2-a80452d01d79",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Check file directory for the movie poster from titanic. \n",
+    "\n",
+    "# Note: the jpeg is there. "
+   ]
   },
   {
    "cell_type": "markdown",
