--- a/Heinen_DSC540_Weeks7&8.ipynb
+++ b/Heinen_DSC540_Weeks7&8.ipynb
@@ -729,21 +729,24 @@
     "    import os\n",
     "    # Define title \n",
     "    title = json_data['Title']\n",
-    "    # define the pister URL from the JSON data\n",
+    "    # define the poster URL from the JSON data\n",
     "    poster_url = json_data['Poster']\n",
-    "    # Splits the poster url by '.' and picks up the last string as file extension\n",
+    "    # Use split to split the poster url at the period \n",
     "    poster_file_extension=poster_url.split('.')[-1]\n",
     "    # Reads the image file from web\n",
     "    poster_data = urllib.request.urlopen(poster_url).read()\n",
     "        \n",
     "    savelocation=os.getcwd()+'\\\\'+'Posters'+'\\\\'\n",
-    "    # Creates new directory if the directory does not exist. Otherwise, just use the existing path.\n",
+    "    # If dictionary does not exist create new path, otherwise use the same path. \n",
     "    if not os.path.isdir(savelocation):\n",
     "        os.mkdir(savelocation)\n",
     "    \n",
     "    filename=savelocation+str(title)+'.'+poster_file_extension\n",
+    "    #open the file \n",
     "    f=open(filename,'wb')\n",
+    "    # Write poster data to file \n",
     "    f.write(poster_data)\n",
+    "    # close the file. \n",
     "    f.close()"
    ]
   },
@@ -756,23 +759,34 @@
    "source": [
     "# 9) Writ utility function to search a movie by its name. \n",
     "\n",
+    "# Buils search function to find the movie information by searching a title \n",
+    "# pass the title\n",
     "def search_movie(title):\n",
+    "    # Try block to reach the API \n",
     "    try:\n",
     "        url = serviceurl + urllib.parse.urlencode({'t': str(title)})+apikey\n",
+    "        # Print header message\n",
     "        print(f'Retrieving the data of \"{title}\" now... ')\n",
     "        print(url)\n",
+    "        # use url open to open the request. \n",
     "        uh = urllib.request.urlopen(url)\n",
+    "        #read and store data in variable .\n",
     "        data = uh.read()\n",
+    "        # store JSON form. \n",
     "        json_data=json.loads(data)\n",
-    "        \n",
+    "\n",
+    "        # If we get a response\n",
     "        if json_data['Response']=='True':\n",
+    "            # print the data to user. \n",
     "            print_json(json_data)\n",
     "            # Asks user whether to download the poster of the movie\n",
     "            if json_data['Poster']!='N/A':\n",
+    "         \n",
     "                save_poster(json_data)\n",
+    "        # Error hendeling id the json data has an error\n",
     "        else:\n",
     "            print(\"Error encountered: \",json_data['Error'])\n",
-    "    \n",
+    "    # Exception handle for URL error. \n",
     "    except urllib.error.URLError as e:\n",
     "        print(f\"ERROR: {e.reason}\")\n"
    ]
@@ -859,13 +873,78 @@
    "id": "6e0be914-46a9-4906-808e-2d6b06831752",
    "metadata": {},
    "source": [
-    "# 3) Connect to an API of your choice and do a simple data pull - you can use any API - except the API you have selected for your project.\n"
+    "# 3) Connect to an API of your choice and do a simple data pull - you can use any API - except the API you have selected for your project.\n",
+    "\n",
+    "## Connect to the API and do a \"Get\" call/operation on the API to return a subset of data from the API\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "6787617a-e25b-48b2-af8f-eb3c3396c682",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Meta Data': {'1. Information': 'Intraday (5min) open, high, low, close prices and volume', '2. Symbol': 'WFH', '3. Last Refreshed': '2024-08-06 20:00:00', '4. Interval': '5min', '5. Output Size': 'Compact', '6. Time Zone': 'US/Eastern'}, 'Time Series (5min)': {'2024-08-06 20:00:00': {'1. open': '51.2980', '2. high': '51.2980', '3. low': '51.2980', '4. close': '51.2980', '5. volume': '100'}, '2024-08-06 18:30:00': {'1. open': '51.2980', '2. high': '51.2980', '3. low': '51.2980', '4. close': '51.2980', '5. volume': '100'}, '2024-08-06 16:10:00': {'1. open': '51.2980', '2. high': '51.2980', '3. low': '51.2980', '4. close': '51.2980', '5. volume': '100'}, '2024-08-06 16:00:00': {'1. open': '51.3500', '2. high': '51.3500', '3. low': '51.2980', '4. close': '51.2980', '5. volume': '101'}, '2024-08-06 15:05:00': {'1. open': '51.4500', '2. high': '51.4500', '3. low': '51.4500', '4. close': '51.4500', '5. volume': '118'}, '2024-08-06 14:45:00': {'1. open': '51.8150', '2. high': '51.8150', '3. low': '51.8100', '4. close': '51.8100', '5. volume': '2476'}, '2024-08-06 13:05:00': {'1. open': '51.7360', '2. high': '51.7360', '3. low': '51.7360', '4. close': '51.7360', '5. volume': '200'}, '2024-08-06 11:35:00': {'1. open': '51.3700', '2. high': '51.3700', '3. low': '51.3700', '4. close': '51.3700', '5. volume': '144'}, '2024-08-05 20:00:00': {'1. open': '50.8370', '2. high': '50.8370', '3. low': '50.8370', '4. close': '50.8370', '5. volume': '100'}, '2024-08-05 18:30:00': {'1. open': '50.8370', '2. high': '50.8370', '3. low': '50.8370', '4. close': '50.8370', '5. volume': '100'}, '2024-08-05 16:10:00': {'1. open': '50.8370', '2. high': '50.8370', '3. low': '50.8370', '4. close': '50.8370', '5. volume': '100'}, '2024-08-05 16:00:00': {'1. open': '50.8200', '2. high': '50.8370', '3. low': '50.8200', '4. close': '50.8370', '5. volume': '181'}, '2024-08-05 11:10:00': {'1. open': '50.9500', '2. high': '50.9500', '3. low': '50.9500', '4. close': '50.9500', '5. volume': '101'}, '2024-08-05 09:40:00': {'1. open': '50.2800', '2. high': '50.2800', '3. low': '50.2800', '4. close': '50.2800', '5. volume': '2100'}, '2024-08-05 08:20:00': {'1. open': '49.7000', '2. high': '49.7000', '3. low': '49.7000', '4. close': '49.7000', '5. volume': '20'}, '2024-08-05 07:00:00': {'1. open': '51.3600', '2. high': '51.3600', '3. low': '51.3600', '4. close': '51.3600', '5. volume': '2100'}, '2024-08-02 20:00:00': {'1. open': '52.3850', '2. high': '52.3850', '3. low': '52.3850', '4. close': '52.3850', '5. volume': '100'}, '2024-08-02 18:30:00': {'1. open': '52.3850', '2. high': '52.3850', '3. low': '52.3850', '4. close': '52.3850', '5. volume': '100'}, '2024-08-02 16:10:00': {'1. open': '52.3850', '2. high': '52.3850', '3. low': '52.3850', '4. close': '52.3850', '5. volume': '100'}, '2024-08-02 16:00:00': {'1. open': '52.3300', '2. high': '52.3850', '3. low': '52.2400', '4. close': '52.2400', '5. volume': '198'}, '2024-08-02 15:10:00': {'1. open': '52.2200', '2. high': '52.2200', '3. low': '52.2200', '4. close': '52.2200', '5. volume': '118'}, '2024-08-02 10:30:00': {'1. open': '51.9440', '2. high': '51.9440', '3. low': '51.9440', '4. close': '51.9440', '5. volume': '301'}, '2024-08-02 09:30:00': {'1. open': '52.4700', '2. high': '52.4700', '3. low': '52.4700', '4. close': '52.4700', '5. volume': '420'}, '2024-08-01 20:00:00': {'1. open': '53.7970', '2. high': '53.7970', '3. low': '53.7970', '4. close': '53.7970', '5. volume': '100'}, '2024-08-01 18:30:00': {'1. open': '53.7970', '2. high': '53.7970', '3. low': '53.7970', '4. close': '53.7970', '5. volume': '100'}, '2024-08-01 16:15:00': {'1. open': '54.0500', '2. high': '54.0500', '3. low': '54.0500', '4. close': '54.0500', '5. volume': '21'}, '2024-08-01 16:10:00': {'1. open': '53.7970', '2. high': '53.7970', '3. low': '53.7970', '4. close': '53.7970', '5. volume': '100'}, '2024-08-01 16:00:00': {'1. open': '53.7600', '2. high': '53.7970', '3. low': '53.7600', '4. close': '53.7970', '5. volume': '172'}, '2024-08-01 15:05:00': {'1. open': '53.5100', '2. high': '53.5100', '3. low': '53.5100', '4. close': '53.5100', '5. volume': '123'}, '2024-08-01 14:55:00': {'1. open': '53.4650', '2. high': '53.4650', '3. low': '53.4600', '4. close': '53.4600', '5. volume': '525'}, '2024-07-31 20:00:00': {'1. open': '55.2470', '2. high': '55.2470', '3. low': '55.2470', '4. close': '55.2470', '5. volume': '100'}, '2024-07-31 18:30:00': {'1. open': '55.2470', '2. high': '55.2470', '3. low': '55.2470', '4. close': '55.2470', '5. volume': '100'}, '2024-07-31 17:40:00': {'1. open': '55.0000', '2. high': '55.0000', '3. low': '55.0000', '4. close': '55.0000', '5. volume': '1'}, '2024-07-31 16:25:00': {'1. open': '56.1200', '2. high': '56.1200', '3. low': '56.1200', '4. close': '56.1200', '5. volume': '4'}, '2024-07-31 16:10:00': {'1. open': '55.2470', '2. high': '55.2470', '3. low': '55.2470', '4. close': '55.2470', '5. volume': '100'}, '2024-07-31 16:00:00': {'1. open': '55.1800', '2. high': '55.2470', '3. low': '55.1300', '4. close': '55.1300', '5. volume': '182'}, '2024-07-31 15:10:00': {'1. open': '55.5600', '2. high': '55.5600', '3. low': '55.5600', '4. close': '55.5600', '5. volume': '104'}, '2024-07-31 12:55:00': {'1. open': '55.3500', '2. high': '55.3500', '3. low': '55.3500', '4. close': '55.3500', '5. volume': '103'}, '2024-07-31 10:35:00': {'1. open': '55.3100', '2. high': '55.3100', '3. low': '55.3100', '4. close': '55.3100', '5. volume': '188'}, '2024-07-30 20:00:00': {'1. open': '54.6180', '2. high': '54.6180', '3. low': '54.6180', '4. close': '54.6180', '5. volume': '100'}, '2024-07-30 18:30:00': {'1. open': '54.6180', '2. high': '54.6180', '3. low': '54.6180', '4. close': '54.6180', '5. volume': '100'}, '2024-07-30 16:10:00': {'1. open': '54.6180', '2. high': '54.6180', '3. low': '54.6180', '4. close': '54.6180', '5. volume': '100'}, '2024-07-30 16:00:00': {'1. open': '54.4600', '2. high': '54.6180', '3. low': '54.4600', '4. close': '54.6180', '5. volume': '131'}, '2024-07-30 15:05:00': {'1. open': '54.4600', '2. high': '54.4600', '3. low': '54.4600', '4. close': '54.4600', '5. volume': '117'}, '2024-07-30 09:40:00': {'1. open': '55.2000', '2. high': '55.2000', '3. low': '55.2000', '4. close': '55.2000', '5. volume': '346'}, '2024-07-30 09:30:00': {'1. open': '54.8300', '2. high': '54.8300', '3. low': '54.8300', '4. close': '54.8300', '5. volume': '206'}, '2024-07-29 20:00:00': {'1. open': '54.9310', '2. high': '54.9310', '3. low': '54.9310', '4. close': '54.9310', '5. volume': '100'}, '2024-07-29 18:30:00': {'1. open': '54.9310', '2. high': '54.9310', '3. low': '54.9310', '4. close': '54.9310', '5. volume': '100'}, '2024-07-29 16:20:00': {'1. open': '55.9700', '2. high': '55.9700', '3. low': '55.9700', '4. close': '55.9700', '5. volume': '11'}, '2024-07-29 16:15:00': {'1. open': '55.5200', '2. high': '55.5200', '3. low': '55.5200', '4. close': '55.5200', '5. volume': '10'}, '2024-07-29 16:10:00': {'1. open': '54.9310', '2. high': '54.9310', '3. low': '54.9310', '4. close': '54.9310', '5. volume': '100'}, '2024-07-29 16:00:00': {'1. open': '54.8400', '2. high': '54.9310', '3. low': '54.8400', '4. close': '54.9310', '5. volume': '128'}, '2024-07-29 15:45:00': {'1. open': '54.9700', '2. high': '54.9700', '3. low': '54.9700', '4. close': '54.9700', '5. volume': '140'}, '2024-07-29 15:25:00': {'1. open': '54.9300', '2. high': '54.9300', '3. low': '54.9300', '4. close': '54.9300', '5. volume': '128'}, '2024-07-29 14:40:00': {'1. open': '54.9500', '2. high': '54.9500', '3. low': '54.9500', '4. close': '54.9500', '5. volume': '100'}, '2024-07-26 20:00:00': {'1. open': '54.9620', '2. high': '54.9620', '3. low': '54.9620', '4. close': '54.9620', '5. volume': '100'}, '2024-07-26 18:30:00': {'1. open': '54.9620', '2. high': '54.9620', '3. low': '54.9620', '4. close': '54.9620', '5. volume': '100'}, '2024-07-26 16:10:00': {'1. open': '54.9620', '2. high': '54.9620', '3. low': '54.9620', '4. close': '54.9620', '5. volume': '100'}, '2024-07-26 16:00:00': {'1. open': '54.9700', '2. high': '54.9700', '3. low': '54.9620', '4. close': '54.9620', '5. volume': '191'}, '2024-07-26 14:15:00': {'1. open': '55.1100', '2. high': '55.1100', '3. low': '55.1100', '4. close': '55.1100', '5. volume': '150'}, '2024-07-26 14:05:00': {'1. open': '55.0500', '2. high': '55.1000', '3. low': '55.0500', '4. close': '55.1000', '5. volume': '200'}, '2024-07-25 20:00:00': {'1. open': '54.5660', '2. high': '54.5660', '3. low': '54.5660', '4. close': '54.5660', '5. volume': '100'}, '2024-07-25 18:30:00': {'1. open': '54.5660', '2. high': '54.5660', '3. low': '54.5660', '4. close': '54.5660', '5. volume': '100'}, '2024-07-25 16:10:00': {'1. open': '54.5660', '2. high': '54.5660', '3. low': '54.5660', '4. close': '54.5660', '5. volume': '100'}, '2024-07-25 16:00:00': {'1. open': '54.6200', '2. high': '54.6200', '3. low': '54.5660', '4. close': '54.5660', '5. volume': '128'}, '2024-07-25 15:20:00': {'1. open': '54.9700', '2. high': '54.9700', '3. low': '54.9700', '4. close': '54.9700', '5. volume': '108'}, '2024-07-25 15:05:00': {'1. open': '54.8700', '2. high': '54.8700', '3. low': '54.8700', '4. close': '54.8700', '5. volume': '114'}, '2024-07-25 13:40:00': {'1. open': '55.1400', '2. high': '55.1400', '3. low': '55.1400', '4. close': '55.1400', '5. volume': '404'}, '2024-07-25 13:25:00': {'1. open': '55.1430', '2. high': '55.1430', '3. low': '55.1430', '4. close': '55.1430', '5. volume': '100'}, '2024-07-25 11:20:00': {'1. open': '54.7290', '2. high': '54.7290', '3. low': '54.7290', '4. close': '54.7290', '5. volume': '200'}, '2024-07-25 09:30:00': {'1. open': '53.9500', '2. high': '53.9500', '3. low': '53.9500', '4. close': '53.9500', '5. volume': '253'}, '2024-07-24 20:00:00': {'1. open': '53.6290', '2. high': '53.6290', '3. low': '53.6290', '4. close': '53.6290', '5. volume': '100'}, '2024-07-24 18:30:00': {'1. open': '53.6290', '2. high': '53.6290', '3. low': '53.6290', '4. close': '53.6290', '5. volume': '100'}, '2024-07-24 16:45:00': {'1. open': '52.1500', '2. high': '52.1500', '3. low': '52.1500', '4. close': '52.1500', '5. volume': '1'}, '2024-07-24 16:10:00': {'1. open': '53.6290', '2. high': '53.6290', '3. low': '53.6290', '4. close': '53.6290', '5. volume': '100'}, '2024-07-24 16:00:00': {'1. open': '54.8900', '2. high': '54.8900', '3. low': '53.6290', '4. close': '53.6290', '5. volume': '165'}, '2024-07-23 20:00:00': {'1. open': '55.2600', '2. high': '55.2600', '3. low': '55.2600', '4. close': '55.2600', '5. volume': '100'}, '2024-07-23 18:30:00': {'1. open': '55.2600', '2. high': '55.2600', '3. low': '55.2600', '4. close': '55.2600', '5. volume': '100'}, '2024-07-23 16:10:00': {'1. open': '55.2600', '2. high': '55.2600', '3. low': '55.2600', '4. close': '55.2600', '5. volume': '100'}, '2024-07-23 16:00:00': {'1. open': '55.3200', '2. high': '55.3200', '3. low': '55.2600', '4. close': '55.2600', '5. volume': '151'}, '2024-07-23 15:05:00': {'1. open': '55.4700', '2. high': '55.4700', '3. low': '55.4700', '4. close': '55.4700', '5. volume': '130'}, '2024-07-23 10:55:00': {'1. open': '55.1610', '2. high': '55.1610', '3. low': '55.1610', '4. close': '55.1610', '5. volume': '400'}, '2024-07-23 09:55:00': {'1. open': '55.2750', '2. high': '55.2750', '3. low': '55.2750', '4. close': '55.2750', '5. volume': '100'}, '2024-07-23 09:30:00': {'1. open': '55.0000', '2. high': '55.0000', '3. low': '55.0000', '4. close': '55.0000', '5. volume': '101'}, '2024-07-22 20:00:00': {'1. open': '54.9890', '2. high': '54.9890', '3. low': '54.9890', '4. close': '54.9890', '5. volume': '100'}, '2024-07-22 18:30:00': {'1. open': '54.9890', '2. high': '54.9890', '3. low': '54.9890', '4. close': '54.9890', '5. volume': '100'}, '2024-07-22 16:10:00': {'1. open': '54.9890', '2. high': '54.9890', '3. low': '54.9890', '4. close': '54.9890', '5. volume': '100'}, '2024-07-22 16:00:00': {'1. open': '55.0600', '2. high': '55.0600', '3. low': '54.9890', '4. close': '54.9890', '5. volume': '124'}, '2024-07-22 15:45:00': {'1. open': '54.9700', '2. high': '54.9700', '3. low': '54.9700', '4. close': '54.9700', '5. volume': '142'}, '2024-07-22 13:55:00': {'1. open': '54.8790', '2. high': '54.8790', '3. low': '54.8790', '4. close': '54.8790', '5. volume': '516'}, '2024-07-22 13:20:00': {'1. open': '54.8410', '2. high': '54.8410', '3. low': '54.8410', '4. close': '54.8410', '5. volume': '400'}, '2024-07-22 11:45:00': {'1. open': '54.6950', '2. high': '54.6950', '3. low': '54.6950', '4. close': '54.6950', '5. volume': '860'}, '2024-07-19 20:00:00': {'1. open': '54.6320', '2. high': '54.6320', '3. low': '54.6320', '4. close': '54.6320', '5. volume': '100'}, '2024-07-19 18:30:00': {'1. open': '54.6320', '2. high': '54.6320', '3. low': '54.6320', '4. close': '54.6320', '5. volume': '100'}, '2024-07-19 16:10:00': {'1. open': '54.6320', '2. high': '54.6320', '3. low': '54.6320', '4. close': '54.6320', '5. volume': '100'}, '2024-07-19 16:00:00': {'1. open': '54.6000', '2. high': '54.6320', '3. low': '54.6000', '4. close': '54.6320', '5. volume': '101'}, '2024-07-19 15:15:00': {'1. open': '54.6100', '2. high': '54.6100', '3. low': '54.6100', '4. close': '54.6100', '5. volume': '109'}, '2024-07-19 15:00:00': {'1. open': '54.5230', '2. high': '54.5230', '3. low': '54.5230', '4. close': '54.5230', '5. volume': '152'}, '2024-07-19 09:30:00': {'1. open': '54.7400', '2. high': '54.7400', '3. low': '54.7400', '4. close': '54.7400', '5. volume': '200'}, '2024-07-18 20:00:00': {'1. open': '54.9120', '2. high': '54.9120', '3. low': '54.9120', '4. close': '54.9120', '5. volume': '100'}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We Have chosen to use a stock API to display stock information. \n",
+    "\n",
+    "# API KEY: P4ZZBS5VD8WA2PAH\n",
+    "\n",
+    "# Import packages\n",
+    "import requests\n",
+    "\n",
+    "# define url \n",
+    "url = 'https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY'\n",
+    "\n",
+    "\n",
+    "# Define the parameters\n",
+    "# Edit params to find soock you wish \n",
+    "params = {\n",
+    "    # Chose wells fargo to search\n",
+    "    'symbol': 'WFH',\n",
+    "    'interval': '5min',\n",
+    "    'apikey' : 'P4ZZBS5VD8WA2PAH'\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Define request use get to make call.\n",
+    "response = requests.get(url, params=params)\n",
+    "\n",
+    "# Store Json data\n",
+    "data = response.json()\n",
+    "# print the result \n",
+    "print(data)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d32fcae6-8316-4d70-b358-615253593f1a",
+   "metadata": {},
+   "source": [
+    "# 4. Using one of the datasets provided in Weeks 5 & 6, or a dataset of your own, choose 3 of the following visualizations to complete. You must submit via PDF along with your code. You are free to use Matplotlib, Seaborn or another package if you prefer.\n",
+    "\n",
+    "a. Line\n",
+    "b. Scatter\n",
+    "c. Bar\n",
+    "d. Histogram\n",
+    "e. Density Plot\n",
+    "f. Pie Chart\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f056c4d-1996-49b8-beb9-a0ab1d051cf5",
+   "id": "d702e513-685a-41af-9ed9-280e8e390d7d",
    "metadata": {},
    "outputs": [],
    "source": []
