--- a/Heinen_DSC540_Weeks7&8.ipynb
+++ b/Heinen_DSC540_Weeks7&8.ipynb
@@ -239,9 +239,9 @@
     "#loop through every link in the list of links \n",
     "for i in range(19,119):\n",
     "    link=links[i]\n",
-    "    # use strip to remove puncuation etc\n",
+    "    # use strip to remove punctuation etc\n",
     "    link=link.strip()\n",
-    "    # 7) use the findall from regrex method to find the numeric didgets in the string. \n",
+    "    # 7) use the findall from regrex method to find the numeric digits in the string. \n",
     "    n=re.findall('[0-9]+',link)\n",
     "    if len(n)==1:\n",
     "        # Add the file number to the list\n",
@@ -267,7 +267,9 @@
     }
    ],
    "source": [
+    "#Print Header\n",
     "print (\"\\nThe file numbers for the top 100 ebooks on Gutenberg are shown below\\n\"+\"-\"*70)\n",
+    "# print booknum list \n",
     "print(booknum)\n"
    ]
   },
